--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+file-roller (3.26.2-0ubuntu1+grm1u2) bionic; urgency=medium
+
+  [ JunSung Choi ]
+  * [5d98b917] Apply iconv for EUC-KR encoding
+
+  [ Gooroom Autobuilder ]
+
+ -- Gooroom Autobuilder <jenkins@gooroom.kr>  Thu, 26 Sep 2019 14:53:38 +0900
+
 file-roller (3.26.2-0ubuntu1+grm1u1) bionic; urgency=medium
 
   [ jongkyung.woo ]
